# synap-well

./: LICENSE  README.md  Wellness_Dataset_feature_extraction_log_tracker.ipynb
synap-well/: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
synap-well/data/processed/: processed_log_tracker.csv  processed_wellness_data.csv
synap-well/data/raw/: CS-GY-6923 Log Tracker  - Daily Questions.csv  CS-GY-6923 Log Tracker  - Initial Questions.csv
synap-well/docs/: mkdocs.yml
synap-well/docs/docs/: index.md
synap-well/models/custom-emotion-model/: config.json
synap-well/notebooks/: CS_GY_6923_ML_Project_Sentiment_Analysis_+_HuggingFace_LLM.ipynb  Regressor_Predictive_Model.ipynb  Regressor_Predictive_Model.py  completed_log_tracker_feature_extraction.ipynb  completed_wellness_dataset_feature_extraction.ipynb  emotion_classification_model.ipynb  main_workflow.ipynb  recommendations.ipynb
synap-well/notebooks/predictive_regressor_training/: Augmented_Wellness_Dataset.csv  CS-GY-6923 Log Tracker  - Daily Questions.csv  Regressor_Predictive_Model.ipynb  processed_wellness_data.csv
synap-well/notebooks/unused/: Sleep_health_data_selection.ipynb
synap-well/synap_well/: __init__.py  dataset.py  features.py  plots.py
synap-well/synap_well/modeling/: predict.py  train.py
