[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "synap_well"
version = "0.0.1"
description = "A Machine Learning project that combines mental health and fitness suggestions."
authors = [
  { name = "Josue Flores, Yukta Kulkarni, Harrison Ahn" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["synap_well"]
include = ["pyproject.toml", "synap_well/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["synap_well"]
force-sort-within-sections = true

